# cvexprocedural

./: CMakeLists.txt  README.md
src/: RAY_CvexProcedural.cpp  RAY_CvexProcedural.hpp
test/: cvexprocedural.hda  demofile.hda  test.hip  test.vfl
